[gd_scene load_steps=8 format=3 uid="uid://d0ta5l2flpeny"]

[ext_resource type="Script" path="res://Weapons/Thunder/Thunder.gd" id="1_384uh"]
[ext_resource type="Texture2D" uid="uid://caokgvcwy75nw" path="res://icon.svg" id="2_k1jpl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1y4yd"]
radius = 15.0

[sub_resource type="Curve" id="Curve_t1eqw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_vx62q"]
offsets = PackedFloat32Array(0.146667, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 1, 1, 1)

[sub_resource type="Curve" id="Curve_r7o8o"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ovlie"]
offsets = PackedFloat32Array(0, 0.163158, 0.710526)
colors = PackedColorArray(1, 1, 1, 1, 0, 0.433333, 1, 1, 0, 0, 0, 1)

[node name="Thunder" type="Area2D"]
script = ExtResource("1_384uh")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 1, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_k1jpl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1y4yd")

[node name="Particle" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 120.0
initial_velocity_max = 120.0
scale_amount_min = 15.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_t1eqw")
color_ramp = SubResource("Gradient_vx62q")

[node name="Particle2" type="CPUParticles2D" parent="."]
visible = false
emitting = false
amount = 32
lifetime = 0.7
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 150.0
scale_amount_min = 15.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_r7o8o")
color_ramp = SubResource("Gradient_ovlie")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Particle" to="." method="_on_cpu_particles_2d_finished"]
[connection signal="finished" from="Particle2" to="." method="_on_cpu_particles_2d_finished"]
